--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+target
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +11,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# eclipse files
+.project
+.classpath
+.settings
+
+# correios
+base-correios
