--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
 	<packaging>war</packaging>
 	<name>Kartero - Base de CEP dos Correios</name>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>miredot</id>
+			<name>MireDot Releases</name>
+			<url>http://nexus.qmino.com/content/repositories/miredot</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -112,7 +120,7 @@
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.9</version>
 				<configuration>
-					<downloadJavadocs>true</downloadJavadocs>
+					<downloadJavadocs>false</downloadJavadocs>
 					<downloadSources>false</downloadSources>
 				</configuration>
 			</plugin>
@@ -134,6 +142,26 @@
 					<lineEnding>LF</lineEnding>
 					<encoding>UTF-8</encoding>
 					<configFile>./src/main/resources/code-formatter.xml</configFile>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.qmino</groupId>
+				<artifactId>miredot-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>restdoc</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<licence>UHJvamVjdHxici5jb20ubGVndWltYXMua2FydGVyby5rYXJ0ZXJvfDIwMTktMDctMTl8dHJ1ZSNNQ3dDRkJFSWh6Y2lwY3g1WU9KdEl4dmN5b0NSRUs4M0FoUVhMcXlwR2ZWVGxJUHRqcjdmUFUva3Flc1hCZz09</licence>
+				    <output>
+				        <html>
+				            ./src/main/webapp
+				        </html>
+				    </output>
 				</configuration>
 			</plugin>
 		</plugins>
