--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
 				</executions>
 				<configuration>
 					<licence>UHJvamVjdHxici5jb20ubGVndWltYXMua2FydGVyby5rYXJ0ZXJvfDIwMTktMDctMTl8dHJ1ZSNNQ3dDRkJFSWh6Y2lwY3g1WU9KdEl4dmN5b0NSRUs4M0FoUVhMcXlwR2ZWVGxJUHRqcjdmUFUva3Flc1hCZz09</licence>
+					<output>
+						<title>Kartero ${project.version}</title>
+						<location>./src/main/webapp</location>
+						<html>
+							<baseUrl>http://kartero.brasilprepagos.com.br/api</baseUrl>
+						</html>
+					</output>
 				</configuration>
 			</plugin>
 		</plugins>
