--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 				<version>3.5.6-Final</version>
 			</dependency>
 			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty</artifactId>
+				<version>${jetty.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
@@ -80,6 +85,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
@@ -91,7 +101,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.version}</version>
+				<version>${jetty.version.plugin}</version>
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webApp>
@@ -177,7 +187,8 @@
 
 	<properties>
 		<hibernate.version>4.3.5.Final</hibernate.version>
-		<jetty.version>9.2.1.v20140609</jetty.version>
+		<jetty.version>6.1.26</jetty.version>
+		<jetty.version.plugin>9.2.1.v20140609</jetty.version.plugin>
 		<slf4j.version>1.7.7</slf4j.version>
 	</properties>
 
