--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,24 @@
 				<version>2.3.2</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.ibatis</groupId>
+				<artifactId>ibatis-core</artifactId>
+				<version>3.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty</artifactId>
 				<version>${jetty.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish</groupId>
+				<artifactId>javax.json</artifactId>
+				<version>1.0.4</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.json</groupId>
+				<artifactId>javax.json-api</artifactId>
+				<version>1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
@@ -94,6 +109,14 @@
 			<artifactId>hibernate-annotations</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.json</groupId>
+			<artifactId>javax.json-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 		</dependency>
@@ -101,6 +124,11 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ibatis</groupId>
+			<artifactId>ibatis-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
